# file_man_cpp

./: CMakeLists.txt  LICENSE  README.md
inc/: FileManager.h  FileManager.hpp  FileManagerDirectory.hpp  FileManagerFile.h  FileManagerFile.hpp
src/: FileManagerDirectory.cpp  FileManagerFile.cpp  FileManagerFile.cxx  main.cpp
test/: CMakeLists.txt  main_test.cpp
