cmake_minimum_required(VERSION 3.20)

project(FileManager)
enable_testing()
find_package(GTest CONFIG REQUIRED)
target_link_libraries(main PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)

add_test(AllTestsInMain main)

add_executable(FileManager src/main.cpp)
set_property(TARGET FileManager PROPERTY CXX_STANDARD 17)
